--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Creazione matrici png"
+    "TODO:\n",
+    "    meno pacman\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creazione matrici png"
    ]
   },
   {
@@ -25,22 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "img=Image.new(\"1\", (300,300),color=1)\n",
-    "\n",
-    "draw = ImageDraw.Draw(img)\n",
-    "#draw.text((17, 0),lettera,fill=0,font=font)\n",
-    "draw.text((50, 150),\"CANE\",fill=0,font=font)\n",
-    "draw = ImageDraw.Draw(img)\n",
-    "img.save(\"a_test.png\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img=Image.new(\"1\", (300,300),color=1)\n",
+    "\n",
+    "draw = ImageDraw.Draw(img)\n",
+    "#draw.text((17, 0),lettera,fill=0,font=font)\n",
+    "draw.text((50, 150),\"CANE\",fill=0,font=font)\n",
+    "draw = ImageDraw.Draw(img)\n",
+    "img.save(\"a_test.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,15 +98,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
     "def noisy(img,maxsize):\n",
     "    draw = ImageDraw.Draw(img)\n",
-    "    for x in range(0,30):\n",
+    "    for x in range(0,5):\n",
     "        draw.point((random.randint(0,maxsize),random.randint(0,maxsize)),0)\n",
-    "        draw.pieslice([(random.randint(0,maxsize), random.randint(0,maxsize)), (random.randint(0,maxsize), random.randint(0,maxsize))],random.randint(0,360),random.randint(0,360),width=3)\n",
+    "        draw.pieslice([(random.randint(0,maxsize), random.randint(0,maxsize)), (random.randint(0,maxsize), random.randint(0,maxsize))],random.randint(0,30),random.randint(0,30),width=3)\n",
     "\n",
     "    return img"
    ]
