--- a/Genera Captcha.ipynb
+++ b/Genera Captcha.ipynb
@@ -9,9 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileExistsError",
+     "evalue": "[WinError 183] Impossibile creare un file, se il file esiste già: './matrici/'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-8199d14f43dc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mN_SAMPLES\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m5000\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"./matrici/\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"./matrici/originale/\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"./captcha/completi/\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\os.py\u001b[0m in \u001b[0;36mmakedirs\u001b[1;34m(name, mode, exist_ok)\u001b[0m\n\u001b[0;32m    219\u001b[0m             \u001b[1;32mreturn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    220\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 221\u001b[1;33m         \u001b[0mmkdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    222\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    223\u001b[0m         \u001b[1;31m# Cannot rely on checking for EEXIST, since the operating system\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileExistsError\u001b[0m: [WinError 183] Impossibile creare un file, se il file esiste già: './matrici/'"
+     ]
+    }
+   ],
    "source": [
     "import PIL\n",
     "from PIL import ImageFont\n",
@@ -50,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,8 +106,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initialised with 5 image(s) found.\n",
-      "Output directory set to ./smp/output."
+      "Initialised with 26 image(s) found.\n",
+      "Output directory set to ./matrici/originale/output."
      ]
     }
    ],
@@ -125,12 +138,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing <PIL.Image.Image image mode=1 size=200x200 at 0x12FB974B400>: 100%|█| 1000/1000 [00:09<00:00, 110.31 Samples/s]\n"
+      "Processing <PIL.Image.Image image mode=1 size=200x200 at 0x24BD6DDF6D8>: 100%|█| 2360/2360 [00:10<00:00, 235.32 Samples/s]\n"
      ]
     }
    ],
    "source": [
-    "p.sample(1000)"
+    "p.sample(2360)"
    ]
   },
   {
@@ -142,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,49 +183,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    \n",
     "path = \"./matrici/originale/output/\"\n",
     "dirs = os.listdir( path )\n",
     "\n",
     "total_width = 1000\n",
     "max_height = 200\n",
-    "for id in range (0,N_SAMPLES):\n",
-    "\n",
+    "for v in range (0,N_SAMPLES):\n",
     "    new_im = Image.new(\"1\", (total_width, max_height))\n",
     "    filename = \"\"\n",
     "    x_offset = 0\n",
     "    list_images = []\n",
     "    for i in range (0,5): #5 elementi\n",
-    "        curr_rand=random.randint(0,len(dirs))\n",
+    "        curr_rand=random.randint(0,len(dirs)-1)\n",
     "        list_images.append(path+dirs[curr_rand])\n",
     "        valore = dirs[curr_rand]\n",
-    "        filename+=valore[10]\n",
+    "        filename+=valore[19]\n",
     "\n",
     "    for im in list_images:\n",
     "        image_cur = Image.open(im)\n",
     "        new_im.paste(image_cur, (x_offset,0))\n",
     "        x_offset += image_cur.size[0]\n",
     "\n",
-    "    new_im.save(f'./captcha/completi/{filename}{id}.png') # es stringa AEDTG45.png"
+    "    new_im.save(f'./captcha/completi/{filename}{v}.png') # es stringa AEDTG45.png"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "129 millisecondi\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#aggiunge il noise ai captcha\n",
     "sporca(\"./captcha/completi/\")"
@@ -220,116 +223,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A\n",
-      "A\n",
-      "A\n",
-      "E\n",
-      "B\n",
-      "A\n",
-      "A\n",
-      "B\n",
-      "D\n",
-      "C\n",
-      "A\n",
-      "B\n",
-      "E\n",
-      "B\n",
-      "A\n",
-      "A\n",
-      "C\n",
-      "C\n",
-      "B\n",
-      "D\n",
-      "A\n",
-      "D\n",
-      "C\n",
-      "D\n",
-      "E\n",
-      "A\n",
-      "E\n",
-      "C\n",
-      "B\n",
-      "B\n",
-      "B\n",
-      "A\n",
-      "D\n",
-      "B\n",
-      "D\n",
-      "B\n",
-      "D\n",
-      "D\n",
-      "D\n",
-      "B\n",
-      "C\n",
-      "A\n",
-      "A\n",
-      "B\n",
-      "E\n",
-      "C\n",
-      "B\n",
-      "B\n",
-      "A\n",
-      "E\n",
-      "C\n",
-      "B\n",
-      "B\n",
-      "E\n",
-      "C\n",
-      "C\n",
-      "C\n",
-      "E\n",
-      "A\n",
-      "A\n",
-      "C\n",
-      "C\n",
-      "E\n",
-      "B\n",
-      "A\n",
-      "C\n",
-      "C\n",
-      "E\n",
-      "B\n",
-      "C\n",
-      "C\n",
-      "D\n",
-      "D\n",
-      "E\n",
-      "D\n",
-      "C\n",
-      "E\n",
-      "C\n",
-      "E\n",
-      "D\n",
-      "D\n",
-      "C\n",
-      "B\n",
-      "C\n",
-      "E\n",
-      "D\n",
-      "E\n",
-      "E\n",
-      "D\n",
-      "E\n",
-      "E\n",
-      "B\n",
-      "E\n",
-      "D\n",
-      "A\n",
-      "E\n",
-      "E\n",
-      "B\n",
-      "A\n",
-      "C\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "path = \"./captcha/completi/\"\n",
@@ -351,6 +247,13 @@
     "            current_box.save(f\"./captcha/singoli/{item[i]}/{i}{time.time()}.png\")\n",
     "            \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -358,18 +261,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.1"
   }
  },
  "nbformat": 4,
