--- a/Genera Captcha.ipynb
+++ b/Genera Captcha.ipynb
@@ -9,22 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileExistsError",
-     "evalue": "[WinError 183] Impossibile creare un file, se il file esiste già: './matrici/'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-8199d14f43dc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mN_SAMPLES\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m5000\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"./matrici/\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"./matrici/originale/\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"./captcha/completi/\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\os.py\u001b[0m in \u001b[0;36mmakedirs\u001b[1;34m(name, mode, exist_ok)\u001b[0m\n\u001b[0;32m    219\u001b[0m             \u001b[1;32mreturn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    220\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 221\u001b[1;33m         \u001b[0mmkdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    222\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    223\u001b[0m         \u001b[1;31m# Cannot rely on checking for EEXIST, since the operating system\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileExistsError\u001b[0m: [WinError 183] Impossibile creare un file, se il file esiste già: './matrici/'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import PIL\n",
     "from PIL import ImageFont\n",
@@ -36,12 +23,15 @@
     "# font = ImageFont.truetype(\"Arial-Bold.ttf\",14)\n",
     "font = ImageFont.truetype(\"arial.ttf\", 100)\n",
     "\n",
-    "N_SAMPLES = 5000\n",
-    "\n",
-    "os.makedirs(\"./matrici/\")\n",
-    "os.makedirs(\"./matrici/originale/\")\n",
-    "os.makedirs(\"./captcha/completi/\")\n",
-    "os.makedirs(\"./captcha/singoli/\")"
+    "N_SAMPLES = 100\n",
+    "if not os.path.exists(\"./matrici/\"):\n",
+    "    os.makedirs(\"./matrici/\")\n",
+    "if not os.path.exists(\"./matrici/originale/\"):\n",
+    "    os.makedirs(\"./matrici/originale/\")\n",
+    "if not os.path.exists(\"./captcha/completi/\"):\n",
+    "    os.makedirs(\"./captcha/completi/\")\n",
+    "if not os.path.exists(\"./captcha/singoli/\"):\n",
+    "    os.makedirs(\"./captcha/singoli/\")"
    ]
   },
   {
@@ -63,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,19 +121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing <PIL.Image.Image image mode=1 size=200x200 at 0x24BD6DDF6D8>: 100%|█| 2360/2360 [00:10<00:00, 235.32 Samples/s]\n"
+      "Processing <PIL.Image.Image image mode=1 size=200x200 at 0x24F1E532208>: 100%|██| 26/26 [00:00<00:00, 299.65 Samples/s]\n"
      ]
     }
    ],
    "source": [
-    "p.sample(2360)"
+    "p.sample(26)"
    ]
   },
   {
@@ -155,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +191,7 @@
     "        curr_rand=random.randint(0,len(dirs)-1)\n",
     "        list_images.append(path+dirs[curr_rand])\n",
     "        valore = dirs[curr_rand]\n",
-    "        filename+=valore[19]\n",
+    "        filename+=valore[10]\n",
     "\n",
     "    for im in list_images:\n",
     "        image_cur = Image.open(im)\n",
@@ -213,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,11 +213,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "path = \"./captcha/completi/\"\n",
     "dirs = os.listdir( path )\n",
     "\n",
@@ -261,6 +250,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
