--- a/Genera Captcha.ipynb
+++ b/Genera Captcha.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,19 +121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing <PIL.Image.Image image mode=1 size=200x200 at 0x24F1E532208>: 100%|██| 26/26 [00:00<00:00, 299.65 Samples/s]\n"
+      "Processing <PIL.Image.Image image mode=1 size=200x200 at 0x62BC198>: 100%|█| 260/260 [00:02<00:00, 114.43 Samples/s]\n"
      ]
     }
    ],
    "source": [
-    "p.sample(26)"
+    "p.sample(260)"
    ]
   },
   {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,6 +165,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "def getfirstUppercase(s):\n",
+    "    return ([char for char in s if char.isupper()])[0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -173,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +202,7 @@
     "        curr_rand=random.randint(0,len(dirs)-1)\n",
     "        list_images.append(path+dirs[curr_rand])\n",
     "        valore = dirs[curr_rand]\n",
-    "        filename+=valore[10]\n",
+    "        filename+=getfirstUppercase(valore)\n",
     "\n",
     "    for im in list_images:\n",
     "        image_cur = Image.open(im)\n",
@@ -203,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
