--- a/Genera Captcha.ipynb
+++ b/Genera Captcha.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,8 @@
     "# font = ImageFont.truetype(\"Arial-Bold.ttf\",14)\n",
     "font = ImageFont.truetype(\"arial.ttf\", 100)\n",
     "\n",
-    "N_SAMPLES = 100\n",
+    "N_SAMPLES = 5000 #numero captcha completi\n",
+    "N_SMP_LETTERE_DEFORMATE =  26000\n",
     "if not os.path.exists(\"./matrici/\"):\n",
     "    os.makedirs(\"./matrici/\")\n",
     "if not os.path.exists(\"./matrici/originale/\"):\n",
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,19 +122,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing <PIL.Image.Image image mode=1 size=200x200 at 0x62BC198>: 100%|█| 260/260 [00:02<00:00, 114.43 Samples/s]\n"
+      "Processing <PIL.Image.Image image mode=1 size=200x200 at 0x82FD0F0>:   6%| | 1684/26000 [01:26<11:57, 33.89 Samples/s]  "
      ]
     }
    ],
    "source": [
-    "p.sample(260)"
+    "p.sample(N_SMP_LETTERE_DEFORMATE)"
    ]
   },
   {
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
