--- a/Genera Captcha.ipynb
+++ b/Genera Captcha.ipynb
@@ -122,14 +122,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing <PIL.Image.Image image mode=1 size=200x200 at 0x82FD0F0>:   6%| | 1684/26000 [01:26<11:57, 33.89 Samples/s]  "
+      "Processing <PIL.Image.Image image mode=1 size=200x200 at 0xED00FD0>: 100%|█| 26000/26000 [06:18<00:00, 68.78 Samples/s] \n"
      ]
     }
    ],
@@ -146,15 +146,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sporca(path):\n",
     "    #t1=round(time.time() * 1000)\n",
-    "\n",
     "    dirs = os.listdir( path )\n",
-    "\n",
     "    for item in dirs:\n",
     "        if os.path.isfile(path+item):\n",
     "            im = Image.open(path+item)\n",
@@ -167,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
