--- a/data number preprocessing.ipynb
+++ b/data number preprocessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,39 +20,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A 153\n",
-      "B 153\n",
-      "C 153\n",
-      "D 153\n",
-      "E 153\n",
-      "F 153\n",
-      "G 153\n",
-      "H 153\n",
-      "I 153\n",
-      "J 153\n",
-      "K 153\n",
-      "L 153\n",
-      "M 153\n",
-      "N 153\n",
-      "O 153\n",
-      "P 153\n",
-      "Q 153\n",
-      "R 153\n",
-      "S 153\n",
-      "T 153\n",
-      "U 153\n",
-      "V 153\n",
-      "W 153\n",
-      "X 153\n",
-      "Y 153\n",
-      "Z 153\n"
+      "A 1004\n",
+      "B 967\n",
+      "C 949\n",
+      "D 984\n",
+      "E 918\n",
+      "F 1045\n",
+      "G 943\n",
+      "H 954\n",
+      "I 953\n",
+      "J 893\n",
+      "K 999\n",
+      "L 962\n",
+      "M 910\n",
+      "N 1010\n",
+      "O 914\n",
+      "P 943\n",
+      "Q 908\n",
+      "R 975\n",
+      "S 980\n",
+      "T 926\n",
+      "U 890\n",
+      "V 1043\n",
+      "W 1022\n",
+      "X 997\n",
+      "Y 957\n",
+      "Z 954\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,39 +85,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A 153\n",
-      "B 153\n",
-      "C 153\n",
-      "D 153\n",
-      "E 153\n",
-      "F 153\n",
-      "G 153\n",
-      "H 153\n",
-      "I 153\n",
-      "J 153\n",
-      "K 153\n",
-      "L 153\n",
-      "M 153\n",
-      "N 153\n",
-      "O 153\n",
-      "P 153\n",
-      "Q 153\n",
-      "R 153\n",
-      "S 153\n",
-      "T 153\n",
-      "U 153\n",
-      "V 153\n",
-      "W 153\n",
-      "X 153\n",
-      "Y 153\n",
-      "Z 153\n"
+      "A 1004\n",
+      "B 967\n",
+      "C 949\n",
+      "D 984\n",
+      "E 918\n",
+      "F 1045\n",
+      "G 943\n",
+      "H 954\n",
+      "I 953\n",
+      "J 893\n",
+      "K 999\n",
+      "L 962\n",
+      "M 910\n",
+      "N 1010\n",
+      "O 914\n",
+      "P 943\n",
+      "Q 908\n",
+      "R 975\n",
+      "S 980\n",
+      "T 926\n",
+      "U 890\n",
+      "V 1043\n",
+      "W 1022\n",
+      "X 997\n",
+      "Y 957\n",
+      "Z 954\n"
      ]
     }
    ],
@@ -141,39 +141,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A 153\n",
-      "B 153\n",
-      "C 153\n",
-      "D 153\n",
-      "E 153\n",
-      "F 153\n",
-      "G 153\n",
-      "H 153\n",
-      "I 153\n",
-      "J 153\n",
-      "K 153\n",
-      "L 153\n",
-      "M 153\n",
-      "N 153\n",
-      "O 153\n",
-      "P 153\n",
-      "Q 153\n",
-      "R 153\n",
-      "S 153\n",
-      "T 153\n",
-      "U 153\n",
-      "V 153\n",
-      "W 153\n",
-      "X 153\n",
-      "Y 153\n",
-      "Z 153\n"
+      "A 890\n",
+      "B 890\n",
+      "C 890\n",
+      "D 890\n",
+      "E 890\n",
+      "F 890\n",
+      "G 890\n",
+      "H 890\n",
+      "I 890\n",
+      "J 890\n",
+      "K 890\n",
+      "L 890\n",
+      "M 890\n",
+      "N 890\n",
+      "O 890\n",
+      "P 890\n",
+      "Q 890\n",
+      "R 890\n",
+      "S 890\n",
+      "T 890\n",
+      "U 890\n",
+      "V 890\n",
+      "W 890\n",
+      "X 890\n",
+      "Y 890\n",
+      "Z 890\n"
      ]
     }
    ],
@@ -181,6 +181,27 @@
     "for item in dirs:\n",
     "    lenght = len([(f) for f in os.listdir(path+item) if os.path.isfile(os.path.join(path,item,f))])\n",
     "    print(item,lenght)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import split_folders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_folder = path\n",
+    "# Split with a ratio.\n",
+    "# To only split into training and validation set, set a tuple to `ratio`, i.e, `(.8, .2)`.\n",
+    "split_folders.ratio(input_folder, output=\"output\", ratio=(.6, .2, .2)) # default values"
    ]
   },
   {
@@ -207,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
