--- a/Num_classification.ipynb
+++ b/Num_classification.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,8 +817,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generazione di captcha custom"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "Y\n",
+      "T\n",
+      "N\n",
+      "F\n"
+     ]
+    }
+   ],
+   "source": [
+    "parola = list(\"AYTNF\")\n",
+    "\n",
+    "total_width = 1000\n",
+    "max_height = 200\n",
+    "\n",
+    "new_im = Image.new(\"1\", (total_width, max_height))\n",
+    "filename = \"\"\n",
+    "x_offset = 0\n",
+    "list_images = []\n",
+    "\n",
+    "matrici = []\n",
+    "\n",
+    "for l in parola:\n",
+    "    print(str(l))\n",
+    "    for k in dirs:\n",
+    "        if getfirstUppercase(k) == l: #è buono e lo prendo\n",
+    "            #print(k)\n",
+    "            matrici.append(k)\n",
+    "    curr_rand=random.randint(0,len(matrici)-1)\n",
+    "    list_images.append(path+matrici[curr_rand])\n",
+    "    matrici=[]\n",
+    "            \n",
+    "        \n",
+    "\n",
+    "for im in list_images:\n",
+    "    image_cur = Image.open(im)\n",
+    "    new_im.paste(image_cur, (x_offset,0))\n",
+    "    x_offset += image_cur.size[0]\n",
+    "\n",
+    "new_im.save(f'./CaptchaTest/{\"\".join(parola)}{random.randint(0,500)}.png') # es stringa AEDTG45.png"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,34 +892,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "# Define root directory\n",
-    "prova_dir = \"F:/Programmazione/UO-Captcha-breaker/python-utils-scripts/\"\n",
-    "\n",
-    "\n",
-    "transform_test = T.Compose([T.Grayscale(num_output_channels=1),\n",
-    "                           trim,\n",
-    "                           T.ToTensor(),\n",
-    "                           normalize])\n",
-    "\n",
-    "\n",
-    "img = Image.open(prova_dir+\"prova-113.png\")\n",
-    "img = transform_test(img)\n",
-    "print(img.size())\n",
-    "\n",
-    "\n",
-    "img = Image.open(prova_dir+\"prova-bin-resized.png\")\n",
-    "img = transform_test(img)\n",
-    "print(img.size())\n",
-    "#plt.imshow(img)\n",
-    "#size = 32,32\n",
-    "#img = img.resize(size)\n",
-    "#plt.imshow(img)"
+    "#############################################"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AYTNF\n"
+     ]
+    }
+   ],
+   "source": [
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1887,7 +1948,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
