--- a/Genera Captcha.ipynb
+++ b/Genera Captcha.ipynb
@@ -25,6 +25,17 @@
     "\n",
     "N_SAMPLES = 5000 #numero captcha completi\n",
     "N_SMP_LETTERE_DEFORMATE =  26000\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#creazione cartelle\n",
+    "\n",
     "if not os.path.exists(\"./matrici/\"):\n",
     "    os.makedirs(\"./matrici/\")\n",
     "if not os.path.exists(\"./matrici/originale/\"):\n",
@@ -37,12 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "size = 200\n",
-    "def crea(lettera):\n",
+    "size = 200 #px\n",
+    "\n",
+    "def creaMatrice(lettera):\n",
     "    img=Image.new(\"1\", (size,size),color=1)\n",
     "    draw = ImageDraw.Draw(img)\n",
     "    draw.text((50, 50),lettera,fill=0,font=font)\n",
@@ -54,16 +66,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Funzione di noise per i campioni\n",
     "def noisy(img,width,height):\n",
     "    draw = ImageDraw.Draw(img)\n",
     "    for x in range(0,15):\n",
     "        draw.point((random.randint(0,width),random.randint(0,height)),0)\n",
     "        draw.line([(random.randint(0,width),random.randint(0,height)), (random.randint(0,width),random.randint(0,height))],width=3)\n",
-    "\n",
+    "        #linee verticali\n",
+    "        xy = (random.randint(0,width),random.randint(0,height))\n",
+    "        xy_due = (random.randint(xy[0]-50,xy[0]+50) ,random.randint(0,height))\n",
+    "        draw.line([xy,xy_due],width=3)\n",
+    "                \n",
     "    return img"
    ]
   },
@@ -71,21 +88,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Funzione di noise per i campioni"
+    "Creazione matrici"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'string' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-7573ca637c94>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#creazione matrici\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0malfabeto\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mascii_uppercase\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#or list(map(chr, range(ord('a'), ord('z')+1)))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#alfabeto = [\"A\",\"B\",\"C\",\"D\",\"E\"]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0ml\u001b[0m \u001b[1;32min\u001b[0m \u001b[0malfabeto\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'string' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#creazione matrici\n",
     "alfabeto = list(string.ascii_uppercase) #or list(map(chr, range(ord('a'), ord('z')+1)))\n",
     "\n",
     "#alfabeto = [\"A\",\"B\",\"C\",\"D\",\"E\"]\n",
     "for l in alfabeto:\n",
-    "    crea(l)"
+    "    creaMatrice(l)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Augmentor"
    ]
   },
   {
@@ -150,22 +186,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sporca(path):\n",
-    "    #t1=round(time.time() * 1000)\n",
+    "def sporcaFolder(path):\n",
     "    dirs = os.listdir( path )\n",
     "    for item in dirs:\n",
     "        if os.path.isfile(path+item):\n",
     "            im = Image.open(path+item)\n",
     "            f, e = os.path.splitext(path+item)\n",
     "            im = noisy(im,width=1000,height=200)\n",
-    "            im.save(f\"{f}.png\")\n",
-    "    #t2=round(time.time() * 1000)\n",
-    "   # print(f\"{t2-t1} millisecondi\") #5ms a immagine"
+    "            im.save(f\"{f}.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,23 +216,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"./matrici/originale/output/\"\n",
+    "path = \"./matrici/originale/output/\" #sono le matrici distorte, 200x200\n",
     "dirs = os.listdir( path )\n",
     "\n",
-    "total_width = 1000\n",
+    "MAX_IMAGES=7\n",
+    "MIN_IMAGES=5\n",
+    "\n",
     "max_height = 200\n",
-    "for v in range (0,N_SAMPLES):\n",
+    "\n",
+    "for v in range (0,10):\n",
+    "    num_images = random.randint(MIN_IMAGES,MAX_IMAGES)\n",
+    "    total_width = num_images*200\n",
+    "    \n",
     "    new_im = Image.new(\"1\", (total_width, max_height))\n",
     "    filename = \"\"\n",
     "    x_offset = 0\n",
     "    list_images = []\n",
-    "    for i in range (0,5): #5 elementi\n",
+    "    for i in range (0,num_images): #num_images elementi\n",
     "        curr_rand=random.randint(0,len(dirs)-1)\n",
-    "        list_images.append(path+dirs[curr_rand])\n",
+    "        list_images.append(os.path.join(path,dirs[curr_rand]))\n",
     "        valore = dirs[curr_rand]\n",
     "        filename+=getfirstUppercase(valore)\n",
     "\n",
@@ -207,7 +246,9 @@
     "        image_cur = Image.open(im)\n",
     "        new_im.paste(image_cur, (x_offset,0))\n",
     "        x_offset += image_cur.size[0]\n",
-    "\n",
+    "    #sporca new_im\n",
+    "    new_im = noisy(new_im,width=total_width,height=max_height)\n",
+    "    #salva new_im\n",
     "    new_im.save(f'./captcha/completi/{filename}{v}.png') # es stringa AEDTG45.png"
    ]
   },
@@ -218,7 +259,7 @@
    "outputs": [],
    "source": [
     "#aggiunge il noise ai captcha\n",
-    "sporca(\"./captcha/completi/\")"
+    "#sporcaFolder(\"./captcha/completi/\")"
    ]
   },
   {
@@ -248,11 +289,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generazione di captcha custom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "Y\n",
+      "T\n",
+      "H\n",
+      "N\n",
+      "G\n",
+      "G\n",
+      "D\n",
+      "N\n",
+      "F\n"
+     ]
+    }
+   ],
+   "source": [
+    "parola = list(\"AYTHNGGDNF\")\n",
+    "\n",
+    "save_path = \"./CaptchaTest/\"\n",
+    "\n",
+    "MAX_IMAGES=7\n",
+    "MIN_IMAGES=5\n",
+    "num_images = len(parola)\n",
+    "\n",
+    "max_height = 200\n",
+    "total_width = num_images*200\n",
+    "\n",
+    "\n",
+    "new_im = Image.new(\"1\", (total_width, max_height))\n",
+    "filename = \"\"\n",
+    "x_offset = 0\n",
+    "list_images = []\n",
+    "\n",
+    "matrici = []\n",
+    "\n",
+    "for l in parola:\n",
+    "    print(str(l))\n",
+    "    for k in dirs:\n",
+    "        if getfirstUppercase(k) == l: #è buono e lo prendo\n",
+    "            #print(k)\n",
+    "            matrici.append(k)\n",
+    "    curr_rand=random.randint(0,len(matrici)-1)\n",
+    "    list_images.append(path+matrici[curr_rand])\n",
+    "    matrici=[]\n",
+    "            \n",
+    "\n",
+    "for im in list_images:\n",
+    "    image_cur = Image.open(im)\n",
+    "    new_im.paste(image_cur, (x_offset,0))\n",
+    "    x_offset += image_cur.size[0]\n",
+    "\n",
+    "new_im = noisy(new_im,width=total_width,height=max_height)\n",
+    "new_im.save(f'{save_path}{\"\".join(parola)}{random.randint(0,500)}.png') # es stringa AEDTG45.png"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#sporca(\"./CaptchaTest/\")"
+   ]
   }
  ],
  "metadata": {
@@ -271,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
