--- a/Genera Captcha.ipynb
+++ b/Genera Captcha.ipynb
@@ -65,8 +65,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Funzione di add noise per i campioni"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +87,6 @@
     "        xy = (random.randint(0,width),random.randint(0,height))\n",
     "        xy_due = (random.randint(xy[0]-50,xy[0]+50) ,random.randint(0,height))\n",
     "        draw.line([xy,xy_due],width=3)\n",
-    "                \n",
     "    return img"
    ]
   },
@@ -176,9 +182,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "# Funzione di add noise per i campioni"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -297,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
